# Docprompt

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  gen_ref_pages.py  index.html  main.py  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  docs.yml  preview.yml  release.yml
assets/css/: styles.a17ad002.css
assets/js/: 01a85c17.d7927cda.js  031793e1.a42cd85b.js  096bfee4.12023f13.js  0e384e19.341826e2.js  0e384e19.a25a53ce.js  0e384e19.c0072228.js  17896441.acda39c7.js  1df93b7f.1ef7e865.js  1df93b7f.d205863a.js  1f391b9e.d62cdffc.js  237.36289912.js  2b7e8a6d.a996bfd1.js  2f59a445.3c40501b.js  30a24c52.6559d90f.js  393be207.35ea784a.js  4c9e35b1.18762ac9.js  533.a1dd8fa5.js  59362658.00d57d86.js  5e95c892.2da6801a.js  608ae6a4.dc99fc15.js  66406991.63f5b3d3.js  6875c492.73e8fca3.js  73664a40.6581012c.js  747.4409cdc8.js  7661071f.4ec4c825.js  814f3328.e263ad3a.js  8717b14a.3101d1c5.js  925b3f96.7c9d89c4.js  935f2afb.fc291048.js  9e4087bc.179a1068.js  9f116b5e.cd861585.js  a6aa9e1f.e8bed478.js  a7023ddc.2838c4bb.js  a7bd4aaa.dd17c5ba.js  a80da1cf.8aa9e1a4.js  a94703ab.588d8f71.js  b2b675dd.d7d15cf1.js  b2f554cd.f5c94b08.js  ccc49370.6c0f5568.js  d9f32620.a2e6a919.js  (+8 more)
benchmarks/: classification.ipynb  ocr.ipynb
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
blogs/: index.html
community/contributing/: index.html
community/versioning/: index.html
concepts/nodes/: index.html
concepts/primatives/: index.html
concepts/provenance/: index.html
concepts/providers/: index.html
docprompt/: __init__.py  _decorators.py  _pdfium.py  cli.py  rasterize.py  silenceable_tqdm.py  storage.py
docprompt/_exec/: ghostscript.py  tesseract.py
docprompt/contrib/: litellm.py
docprompt/modeling/layoutlm_v3/: embedding.py  schema.py
docprompt/provenance/: __init__.py  search.py  source.py  util.py
docprompt/schema/: __init__.py  document.py  layout.py  metadata.py  operations.py  pipeline.py  storage.py
docprompt/schema/pipeline/: __init__.py  collection.py  metadata.py  rasterizer.py
docprompt/service_providers/: base.py  google_docai.py  types.py
docprompt/service_providers/rate_limit/: __init__.py  google_docai_limiter.py
docprompt/storage/: THOUGHTS.md  __init__.py  _base.py  fs.py  local.py  s3.py
docprompt/table/: extract.py
docprompt/tasks/: base.py  capabilities.py  credentials.py  factory.py  message.py  parser.py  result.py  util.py
docprompt/tasks/classification/: anthropic.py  base.py  image.py
docprompt/tasks/markerize/: anthropic.py  base.py  image.py
docprompt/tasks/ocr/: amazon.py  amazon_textract.py  base.py  gcp.py  result.py  tesseract.py
docprompt/tasks/table_extraction/: anthropic.py  base.py  image_xml.py  result.py  schema.py
docprompt/textual/: date_extraction.py
docprompt/utils/: __init__.py  async_utils.py  compressor.py  date_extraction.py  inference.py  layout.py  rasterize.py  splitter.py  util.py
docprompt/utils/masking/: image.py
docs/: api.md  enterprise.md  gen_ref_pages.py  index.md  installation.md  usage.md
docs/concepts/: nodes.md  primatives.md  provenance.md  providers.md
docs/docprompt/: CNAME  docusaurus.config.ts  package-lock.json  package.json
docs/docprompt/docs/: enterprise.md  intro.md
docs/enterprise/: index.html
docs/guide/classify/: binary.md  multi.md  single.md
docs/guide/ocr/: advanced_search.md  advanced_workflows.md  basic_usage.md  provider_config.md
docs/guide/table_extraction/: extract_tables.md
docs/intro/: index.html
enterprise/: index.html
guide/classify/: index.html
guide/classify/binary/: index.html
guide/classify/multi/: index.html
guide/classify/single/: index.html
guide/extract_tables/: index.html
guide/ocr/: index.html
guide/ocr/advanced_search/: index.html
guide/ocr/advanced_workflows/: index.html
guide/ocr/basic_usage/: index.html
guide/ocr/provider_config/: index.html
guide/table_extraction/extract_tables/: index.html
markdown-page/: index.html
reference/SUMMARY/: index.html
reference/_decorators/: index.html
reference/_exec/: index.html
reference/_exec/ghostscript/: index.html
reference/_exec/tesseract/: index.html
reference/_pdfium/: index.html
reference/contrib/: index.html
reference/contrib/parser_bot/: index.html
reference/provenance/: index.html
reference/provenance/search/: index.html
reference/provenance/source/: index.html
reference/provenance/util/: index.html
reference/rasterize/: index.html
reference/schema/: index.html
reference/schema/document/: index.html
reference/schema/layout/: index.html
reference/schema/metadata/: index.html
reference/schema/pipeline/: index.html
reference/storage/: index.html
reference/tasks/: index.html
reference/tasks/base/: index.html
reference/tasks/capabilities/: index.html
reference/tasks/classification/: index.html
reference/tasks/credentials/: index.html
reference/tasks/factory/: index.html
reference/tasks/markerize/: index.html
reference/tasks/message/: index.html
reference/tasks/ocr/: index.html
reference/tasks/parser/: index.html
reference/tasks/result/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: __init__.py  _run_tests_with_coverage.py  conftest.py  fixtures.py  test_date_extraction.py  test_decorators.py  test_docprompt.py  test_document.py  test_documentnode.py  test_layout_models.py  test_search.py  test_storage.py  test_threadpool.py  util.py
tests/fixtures/: 1_ocr.json
tests/schema/: test_document.py
tests/tasks/: test_credentials.py  test_factory.py  test_result.py  test_task_provider.py
(+55 files in other folders)
